# mia

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.centos6  Dockerfile.u1604  Dockerfile.u1804  Dockerfile.u1810  Dockerfile.u1904  Dockerfile.u1910  README.md  appveyor.yml  build.rs  install.sh
.github/workflows/: rust.yml
ci/: before_deploy.sh  install.sh  prepare_deploy.sh  run-docker.sh  run.sh  script.sh  utils.sh
completions/: README.md  _algo.bash-completions  algo-zsh-completions
completions/bash/: algo  mia
completions/zsh/: _algo  _mia
contrib/: .gitignore  Makefile  README.md  make-aur
contrib/arch/: .gitignore
contrib/arch/algorithmia-bin/: PKGBUILD.template
contrib/arch/algorithmia-git/: PKGBUILD.template
docs/: CNAME  index.html
docs/public/css/: all.css  custom.css
src/: algo.rs  auth.rs  config.rs  data.rs  main.rs  mia.ans  mia.txt
src/algo/: clone.rs  mod.rs  run.rs  runlocal.rs  serve.rs
src/data/: cat.rs  cp.rs  download.rs  ls.rs  mkdir.rs  mod.rs  mount.rs  rm.rs  rmdir.rs  upload.rs
test/: algo_test.sh  data_test.sh
