[package]

name = "algo"
version = "1.0.2"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
algorithmia = { version = "3.0.0-beta.3", default_features = false }
docopt = "0.7.0"
rustc-serialize = "0.3.19"
chan = "0.1.18"
env_logger = "0.4.2"
toml = "0.4.0"
rpassword = "4.0"
mime = "0.3.13"
terminal_size = "0.1"
isatty = "0.1"
url = "2.1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
wait-timeout = "0.1.5"
idna = "0.1.5"
termcolor = "1.1.0"

[build-dependencies]
chrono = "0.2.21"

[features]
default = ["algorithmia/default-tls"]
rust-tls = ["algorithmia/rust-tls"]
